<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Theme.CrowdZero"

    tools:context=".Login"
  >
    <TextView
        android:id="@+id/TXT_Login"
        android:layout_width="86dp"
        android:layout_height="42dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/Login"
        android:textAllCaps="false"
        android:textSize="26sp"
        android:theme="@style/Theme.TXT_VEscuro"
        android:layout_centerHorizontal="true"

        />

    <TextView
        android:id="@+id/TXT_LoginAbaixo"
        android:layout_below="@+id/TXT_Login"
        android:layout_width="159dp"
        android:layout_height="37dp"
        android:fontFamily="@font/poppins"
        android:layout_centerHorizontal="true"
        android:text="@string/DigiteDados"
        android:textAlignment="center"
        android:textSize="12sp"
     />

    <EditText
        android:id="@+id/INP_Email"
        android:layout_width="312dp"
        android:layout_height="85dp"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/ic_check_circle"
        android:drawablePadding="12dp"
        android:elevation="5dp"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/Email"
        android:textColor="@color/TextMain"
        android:inputType="textEmailAddress"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_marginTop="20sp"
        android:layout_below="@+id/TXT_LoginAbaixo"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true" />


    <EditText
        android:id="@+id/INP_Password"
        android:layout_width="312dp"
        android:layout_height="85dp"
        android:textColor="@color/TextMain"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/ic_password_eye"
        android:drawablePadding="12dp"
        android:elevation="5dp"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/Senha"
        android:inputType="textPassword"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_below="@+id/INP_Email"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"

        />

    <Button
        android:id="@+id/BTN_Confirmar"
        android:layout_width="312dp"
        android:layout_height="55dp"
        android:background="@drawable/custom_login_button"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/FazerLogin"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:iconTint="#FFFFFF"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="25dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/INP_Password"/>



    <LinearLayout
        android:id="@+id/AUX_Linear14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/BTN_Confirmar"
        >
    <TextView
        android:id="@+id/TXT_Registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/NaoConta"

        android:textSize="13sp"
         />

    <TextView
        android:id="@+id/BTN_Registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/Registar"
        android:textSize="13sp"
        android:theme="@style/Theme.TXT_VEscuro"
        />
    </LinearLayout>
</RelativeLayout>
