<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AssociarSucesso">

    <ImageView
        android:id="@+id/IMG_AssociarSucesso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="25dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/img_associar_sucesso" />

    <TextView
        android:id="@+id/TXT_SolicitacaoEnviada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="center"
        android:theme="@style/Theme.TXT_VEscuro"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/IMG_AssociarSucesso"
        android:text="@string/SolicitacaoEnviada" />

    <TextView
        android:id="@+id/TXT_VoceRealizou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="13sp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:theme="@style/Theme.TXT_VClaro"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/TXT_SolicitacaoEnviada"
        android:text="@string/VoceRealizou" />

    <TextView
        android:id="@+id/TXT_NomeInstituicao_AssociarSucesso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="center"
        android:textSize="13sp"
        android:layout_centerHorizontal="true"
        android:theme="@style/Theme.TXT_VEscuro"
        android:layout_below="@+id/TXT_VoceRealizou"
        android:text="@string/Nome" />

    <TextView
        android:id="@+id/TXT_IremosProcessar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textSize="13sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="55dp"
        android:layout_centerHorizontal="true"
        android:theme="@style/Theme.TXT_VClaro"
        android:layout_below="@+id/TXT_NomeInstituicao_AssociarSucesso"
        android:text="@string/IremosProcessar" />

    <Button
        android:id="@+id/BTN_VoltarPrincipal"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TXT_IremosProcessar"
        android:background="@drawable/custom_login_button"
        android:layout_centerHorizontal="true"
        android:text="@string/VoltarPrincipal"
        android:textColor="@color/white" />
</RelativeLayout>