<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_estatisticas"
    android:orientation="horizontal"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/IMG_FotoRank"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/circle"
            android:layout_marginStart="10sp"
            android:contentDescription="@string/TODO"
            android:src="@drawable/img_perfil"
            />

        <TextView
            android:id="@+id/TXT_NomeUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginStart="50sp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/Nome"
            android:textSize="14sp"
            android:theme="@style/Theme.TXT_VEscuro"
            />

        <TextView
            android:id="@+id/TXT_PontosRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:padding="7dp"
            android:gravity="center"
            android:layout_marginStart="250sp"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/Pontos"
            android:theme="@style/Theme.TXT_VClaro2"
            />

        <TextView
            android:id="@+id/TXT_DivisaoRank"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textSize="14sp"
            android:background="@drawable/custom_button_disable"
            android:backgroundTint="@color/Ouro"
            android:textColor="@color/white"
            android:padding="7dp"
            android:gravity="center"
            android:layout_marginStart="350sp"
            android:textAlignment="center"
            android:text="@string/SemDivisao"
            android:theme="@style/Theme.TXT_VClaro"
            />
    </RelativeLayout>
</LinearLayout>
