<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Intro"
    >

    <TextView
        android:id="@+id/TXT_BemVindo"

        android:layout_marginTop="40dp"
        android:layout_marginBottom="25dp"
        android:layout_centerHorizontal="true"



        android:text="@string/BemVindo"
        android:textSize="26sp"
        android:theme="@style/Theme.TXT_VEscuro"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/intro_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    </androidx.viewpager.widget.ViewPager>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/Voltar_Intro"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:visibility="invisible"
            android:layout_weight="0"
            android:text="@string/Voltar"
            android:theme="@style/Theme.TXT_VEscuro" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="3"
            />

        <Button
            android:id="@+id/Proximo_Intro"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"

            android:text="@string/Proximo"
            style="?android:attr/borderlessButtonStyle"
            android:theme="@style/Theme.TXT_VEscuro" />
    </LinearLayout>




    <LinearLayout
        android:id="@+id/dots_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
       />


</RelativeLayout>